# Horizon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Scripts/: main.cpp
Src/: CMakeLists.txt
Src/HardwareWrapper/: ComputePipeline.cpp  HardwareCommands.cpp  HardwareDisplayer.cpp  HardwareExecutor.cpp
Src/HardwareWrapperVulkan/HardwareVulkan/: HardwareExecutorVulkan.h
Src/HardwareWrapperVulkan/PipelineVulkan/: RasterizerPipeline.h
Src/Helicon/Codegen/: VariateProxy.h
Src/Helicon/Codegen/AST/: AST.cpp  AST.hpp  Node.hpp
Src/Helicon/Codegen/Generator/: SlangGenerator.cpp
Src/Helicon/Compiler/: ShaderCodeCompiler.cpp  ShaderCodeCompiler.h  ShaderLanguageConverter.cpp
cmake/: HeliconShaderCompile.cmake  HorizonCoreDependencies.cmake  HorizonCorona.cmake  HorizonExampleDependencies.cmake  HorizonOcarina.cmake  HorizonRuntimeDeps.cmake
docs/: cmake-usage.md
examples/: CMakeLists.txt  CubeData.h  SignalHandler.h  TextureTest.h  common.cpp  common.h  config.hpp  main.cpp  multithreading.cpp  runtime_config.h  scenario.h  simpleFrag.glsl  simpleVert.glsl  texture_utils.hpp
examples/1_default_test/: default_scenario.cpp
examples/common/: asset_utils.cpp  texture_loader.h
examples/default/: CMakeLists.txt  config.h  default_test.hpp  main.cpp
examples/example_baseline/: example_baseline.cpp  example_baseline.h  example_baseline.hpp  example_baseline_edsl.cpp  example_baseline_glsl.cpp  example_baseline_tutorial.cpp
examples/example_baseline/shaders/: baseline_model.vert
examples/example_default/: default_test.hpp  example_default.cpp  example_default.h
examples/example_default/shaders/: compute.glsl
examples/example_edsl/: example_edsl.cpp  example_edsl.h
examples/example_env/: example_env.cpp  example_env.h  example_env.hpp
examples/example_glsl/: example_glsl.cpp  example_glsl.h
examples/legacy/: baseline.cpp
examples/unorganized/: baseline.cpp
include/: Horizon.h  format.h  horizon_refac.h
modules/corona/: .gitignore  CMakeLists.txt  README.md
modules/corona/cmake/: CoronaOptions.cmake  CoronaRuntime.cmake  CoronaRuntimeCopy.cmake  CoronaTbbConfig.cmake  CoronaThirdParty.cmake
modules/corona/doc/: README.md  architecture_overview.md  architecture_overview_cn.md  ecs_guide.md  ecs_guide_cn.md  getting_started.md  getting_started_cn.md  module_usage_guide.md  module_usage_guide_cn.md  plugin_guide.md  plugin_guide_cn.md
modules/corona/doc/coro/: coro_usage_guide.md  coro_usage_guide_cn.md  coroutine_design.md
modules/corona/doc/ecs/: archetype_design.md  entity_manager_design.md  query_system_design.md  thread_safety_design.md  world_design.md
modules/corona/doc/memory_pool/: memory_pool_design.md
modules/corona/examples/: CMakeLists.txt
modules/corona/examples/01_event_bus/: main.cpp
modules/corona/examples/02_system_lifecycle/: main.cpp
modules/corona/examples/03_event_stream/: main.cpp
modules/corona/examples/04_vfs/: main.cpp
modules/corona/examples/05_multithreading/: main.cpp
modules/corona/examples/06_game_loop/: main.cpp
modules/corona/examples/07_storage/: main.cpp
modules/corona/examples/08_ecs/: main.cpp
modules/corona/examples/09_memory_pool/: main.cpp
modules/corona/examples/10_coroutine/: main.cpp
modules/corona/include/corona/kernel/core/: callback_sink.h  i_logger.h  i_plugin_manager.h  i_vfs.h  kernel_context.h
modules/corona/include/corona/kernel/coro/: async_scope.h  awaitables.h  coro.h  coro_concepts.h  executor.h  generator.h  scheduler.h  sync.h  task.h  tbb_executor.h  when_all.h
modules/corona/include/corona/kernel/ecs/: archetype.h  archetype_layout.h  archetype_signature.h  chunk.h  chunk_allocator.h  component.h  ecs_types.h  entity_id.h  entity_manager.h  entity_record.h  world.h
modules/corona/include/corona/kernel/memory/: cache_aligned_allocator.h  chunk.h  fixed_pool.h  frame_arena.h  linear_arena.h  lock_free_stack.h  memory_pool.h  object_pool.h  pool_config.h  thread_local_pool.h
modules/corona/include/corona/kernel/system/: i_system_context.h
modules/corona/include/corona/kernel/utils/: lock_free_queue.h  stack_trace.h  storage.h  task_group.h  task_scheduler.h  work_stealing_queue.h
modules/corona/include/corona/pal/: cfw_platform.h  i_dynamic_library.h  i_file_system.h
modules/corona/src/kernel/: CMakeLists.txt
modules/corona/src/kernel/core/: kernel_context.cpp  logger.cpp  plugin_manager.cpp  vfs.cpp
modules/corona/src/kernel/ecs/: archetype.cpp  archetype_layout.cpp  archetype_signature.cpp  chunk.cpp  chunk_allocator.cpp  entity_manager.cpp  world.cpp
modules/corona/src/kernel/memory/: cache_aligned_allocator.cpp  fixed_pool.cpp  frame_arena.cpp  linear_arena.cpp
modules/corona/src/kernel/system/: system_manager.cpp
modules/corona/src/kernel/utils/: task_group.cpp  task_scheduler.cpp  work_stealing_queue.cpp
modules/corona/src/pal/: CMakeLists.txt
modules/corona/src/pal/common/: factory.cpp  file_system.cpp
modules/corona/src/pal/platform/windows/: win_dynamic_library.cpp
modules/ocarina/ext/: CMakeLists.txt
modules/ocarina/ext/stblib/: CMakeLists.txt
ocarina/: CMakeLists.txt
ocarina/ext/: CMakeLists.txt
ocarina/ext/EASTL/: CMakeLists.txt
src/HardwareWrapper/: HardwareBuffer.cpp  HardwareImage.cpp  HardwarePushConstant.cpp  RasterizerPipeline.cpp
src/HardwareWrapperVulkan/: HardwareContext.cpp  (+4 more)
src/Helicon/: CMakeLists.txt  Helicon.h
src/Helicon/Codegen/: BuiltinVariate.h  ComputePipelineObject.h  ControlFlows.h  CustomLibrary.h  MathProxy.h  ParseHelper.h  RasterizedPipelineObject.h  TypeAlias.h
src/Helicon/Codegen/AST/: AST.hpp  Enum.hpp  Node.cpp  Parser.cpp  Parser.hpp  Struct.hpp
src/Helicon/Codegen/Generator/: SlangGenerator.cpp  SlangGenerator.hpp
src/Helicon/Compiler/: ShaderCodeCompiler.cpp  ShaderHardcodeManager.cpp  ShaderHardcodeManager.h  ShaderLanguageConverter.cpp  ShaderLanguageConverter.h  ShaderTypeMapping.cpp  ShaderTypeMapping.h  ShaderUtils.cpp  ShaderUtils.h
src/Helicon/Compiler/assets/shaders/: compute.glsl.hpp  frag.glsl.hpp  vert.glsl.hpp
tools/: CMakeLists.txt  code-format.ps1
(+21 files in other folders)
